add more meta tags

--- a/content/events/bmt-2023.md
+++ b/content/events/bmt-2023.md
@@ -3,12 +3,14 @@ title = "Berkeley Math Tournament 2023"
 date = 2023-11-04
 +++
 
-{% alert(title="Registration Closed") %} We have hit our cap of 700
-registrations, and registration is now closed for BMT 2023. {% end %}
-
 Welcome to Berkeley Math Tournament 2023! BMT 2023 will be **in-person**, with
 various **satellite tournaments**. The tournament will consist of 3 main rounds
 — Power, Focus/General, and Guts.
+
+<!-- more -->
+
+{% alert(title="Registration Closed") %} We have hit our cap of 700
+registrations, and registration is now closed for BMT 2023. {% end %}
 
 BMT is open to high school students in **grades 12 or below**. In particular,
 there is **no lower age limit** to compete in BMT; advanced middle school
