--- a/content/news/2023-08-21_bmt-2023-date-set.md
+++ b/content/news/2023-08-21_bmt-2023-date-set.md
@@ -8,6 +8,8 @@ title = "BMT is on November 4th, 2023!"
 We are excited to announce that this year’s Berkeley Math Tournament (BMT) will
 be on November 4, 2023 in person at UC Berkeley!
 
+<!-- more -->
+
 BMT is our flagship tournament designed for teams of advanced middle school or
 high school students in mind, but younger students are allowed to participate.
 With BMT we aim to introduce students to math beyond what is taught in the
