--- a/content/news/2023-10-30_bmt-2023-logistics.md
+++ b/content/news/2023-10-30_bmt-2023-logistics.md
@@ -9,6 +9,8 @@ logistics for the 2023 Berkeley Math Tournament. Please read this email **in its
 entirety** — understanding of these details is crucial to ensuring a smooth
 experience at the event.
 
+<!-- more -->
+
 {% button_link(href="/events/bmt-2023") %} Event Details {% end %}
 
 ## Important Information
