--- a/content/events/bmmt-2023.md
+++ b/content/events/bmmt-2023.md
@@ -7,6 +7,8 @@ Welcome to Berkeley mini Math Tournament 2023! BmMT 2023 will be **in-person**,
 with various **satellite tournaments**. The tournament will consist of 4 main
 rounds — Puzzle, Individual, Team, and Relay.
 
+<!-- more -->
+
 BmMT is open to middle school students in **grades 8 or below**. In particular,
 there is **no lower age limit** to compete in BmMT; advanced elementary students
 are welcome to compete. Coaches can register **up to 5 students per team**.
