add archives for old bmt.berkeley.edu urls

--- a/content/events/bmmt-2023.md
+++ b/content/events/bmmt-2023.md
@@ -1,6 +1,7 @@
 +++
 title = "Berkeley mini Math Tournament 2023"
 date = 2023-04-15
+aliases = ["/bmmt-2023"]
 +++
 
 Welcome to Berkeley mini Math Tournament 2023! BmMT 2023 will be **in-person**,
