--- a/content/events/bmt-2023.md
+++ b/content/events/bmt-2023.md
@@ -1,6 +1,7 @@
 +++
 title = "Berkeley Math Tournament 2023"
 date = 2023-11-04
+aliases = ["/bmt-2023"]
 +++
 
 Welcome to Berkeley Math Tournament 2023! BMT 2023 will be **in-person**, with
