add description separator

--- a/content/news/2023-11-04_bmt-2023-thanks.md
+++ b/content/news/2023-11-04_bmt-2023-thanks.md
@@ -10,6 +10,8 @@ truly grateful for all the excitement, enthusiasm, and competitive spirit every
 one of you brought to the tournament. It was a truly rewarding experience seeing
 so many talented, passionate students come together to explore mathematics.
 
+<!-- more -->
+
 We run this tournament every year, and would really appreciate if you can share
 your experience and constructive criticisms with us so that we can make your
 experience more enjoyable in the future. You can fill out the feedback survey by
