allow newlines in titles

--- a/content/news/2023-11-16_bmmt-2024-date-set.md
+++ b/content/news/2023-11-16_bmmt-2024-date-set.md
@@ -1,5 +1,5 @@
 +++
-title = "BmMT 2024 will be on April 6, 2024 • BMT 2024 will be on November 2, 2024"
+title = "BmMT 2024 will be held on April 6, 2024\nBMT 2024 will be held on November 2, 2024"
 +++
 
 We are excited to announce that this year’s Berkeley mini Math Tournament (BmMT)
