Update bmmt 2024 date

--- a/content/news/2023-11-16_bmmt-2024-date-set.md
+++ b/content/news/2023-11-16_bmmt-2024-date-set.md
@@ -1,9 +1,9 @@
 +++
-title = "BmMT 2024 will be held on April 6, 2024\nBMT 2024 will be held on November 2, 2024"
+title = "BmMT 2024 will be held on April 14, 2024\nBMT 2024 will be held on November 2, 2024"
 +++
 
 We are excited to announce that this year’s Berkeley mini Math Tournament (BmMT)
-will be on April 6, 2024, and the Berkeley Math Tournament (BMT) will be on
+will be on April 14, 2024, and the Berkeley Math Tournament (BMT) will be on
 November 2, 2024, both in person at UC Berkeley!
 
 <!-- more -->
@@ -13,3 +13,7 @@ elementary school students! Through exciting formats like the Puzzle Round and
 Relay Round, it showcases the beauty and fun of mathematics.
 
 Registration is expected to open in late January. Stay tuned for more details!
+
+_Note: A previous version of this announcement incorrectly mentioned the date of
+BmMT 2024 as April 6, 2024. The post has since been updated to reflect the
+correct date: April 14._
