fix bmmt 2024 page issues

--- a/content/events/bmmt-2024.md
+++ b/content/events/bmmt-2024.md
@@ -8,6 +8,8 @@ Welcome to Berkeley mini Math Tournament 2024! BmMT 2024 will be **in-person**,
 with various **satellite tournaments**. The tournament will consist of 4 main
 rounds — Puzzle, Individual, Team, and Relay.
 
+<!-- more -->
+
 BmMT is open to middle school students in **grades 8 or below**. In particular,
 there is **no lower age limit** to compete in BmMT; advanced elementary students
 are welcome to compete. Coaches can register **up to 5 students per team**.
@@ -15,27 +17,26 @@ There are no restrictions on how many teams/students a single coach can
 register. You do not have to be local to the Bay Area or California to register
 for BmMT.
 
-{% alert(title="Limited Registration") %} Registration is now open for BmMT 2023! 
-We estimate to have space for approximately 800 students, and registration will 
-close when seats have been sold out. {% end %}
+{% alert(title="Limited Registration") %} Registration is now open for BmMT
+2024! We estimate to have space for approximately 800 students, and registration
+will close when seats have been sold out. {% end %}
 
 # Registration Information
- 
+
 {% button_link(href="https://contestdojo.com/") %} Registration Portal {% end %}
 
 ## Registration, Waivers, and Pricing
 
-| Dates       | Registration Period  | Price Per Student  | Additional Notes                                               |
-| ----------- | -------------------- | ------------------ | -------------------------------------------------------------- |
-| 2/1 – 3/15  | Regular Registration | $15                | Shirts may be pre-ordered for $8 per student.                  |
-| 3/16 – 3/31 | Late Registration    | $20                | Shirts are not guaranteed, but may be purchased day-of for $10 |
+| Dates       | Registration Period  | Price Per Student | Additional Notes                                               |
+| ----------- | -------------------- | ----------------- | -------------------------------------------------------------- |
+| 2/1 – 3/15  | Regular Registration | $15               | Shirts may be pre-ordered for $8 per student.                  |
+| 3/16 – 3/31 | Late Registration    | $20               | Shirts are not guaranteed, but may be purchased day-of for $10 |
 
 \*All dates are in PT. That is, Regular Registration ends at 11:59 PM PT on
-3/15/2023.
+3/15/2024.
 
-\*\*For students facing financial hardship, please contact
-<finance@bmt.berkeley.edu> for a fee waiver. We will not honor refunds during
-late registration.
+\*\*For students facing financial hardship, please contact <team@berkeley.mt>
+for a fee waiver. We will not honor refunds during late registration.
 
 Registration is performed on ContestDojo. Coaches may register up to 5 people
 per team, and ContestDojo will allow them to assign and modify teams up until
@@ -46,7 +47,7 @@ consent waivers through this portal. Contestants will NOT be allowed to take the
 contest without having a signed liability and consent to treatment waiver.**
 
 Any questions about the ContestDojo portal should be directed to us at
-<questions@bmt.berkeley.edu>.
+<team@berkeley.mt>.
 
 ## Student Eligibility
 
@@ -62,8 +63,8 @@ Any questions about the ContestDojo portal should be directed to us at
 
 Students may register as a team of 1, however, it is beneficial to compete on a
 team of at least 3 due to our scoring guidelines. For students who do not have a
-full team, we organized a ["Team Finder" document](team-finder). Follow all
-outlined steps in the document.
+full team, we organized a [Team-Finder] document. Follow all outlined steps in
+the document.
 
 # BmMT Rounds
 
@@ -179,15 +180,15 @@ If the team has fewer than that many members, we will add 0’s until the team h
 reached at least 3 scores, of which we will take the average.
 
 While individuals are allowed to register a 1-person team, we highly encourage
-students without a team to use the [Team-Finder](team-finder) to create a team
-of at least 3.
+students without a team to use the [Team-Finder] to create a team of at least 3.
 
 Scores for a given round will be normalized by either the top 10 scores or the
 top 10% score, whichever is greater.
 
 # Schedule
- 
-The schedule will be updated here soon!
+
+The schedule will be updated here soon, but the event is expected to begin at 8
+AM and end at 6 PM.
 
 <!--- | Time     | Student Event                   | -->
 <!--- | -------- | ------------------------------- | -->
@@ -197,14 +198,6 @@ The schedule will be updated here soon!
 <!--- | 1:15 PM  | Team Round + Relay Round        | -->
 <!--- | 3:30 PM  | Activities                      | -->
 <!--- | 5:00 PM  | Awards                          | -->
-
-## Student Activities
-
-Student activities will be updated here soon!
-
-## Parent Activities
-
-Parent activities will be updated here soon!
 
 # Day of Logistics
 
@@ -250,7 +243,7 @@ globe for competitors wishing to compete in a different time zone.
 
 Lunch is **not provided** for BmMT 2024. Students, coaches and parents are free
 to find food in Berkeley. Restaurants can be found on the south side of campus
-(~5 minute walk from homerooms) and downtown (~15 minute walk from home rooms)
+(~5 minute walk from home rooms) and downtown (~15 minute walk from home rooms)
 
 ### Where can I find parking / How can I get around Berkeley?
 
@@ -261,5 +254,5 @@ Structure, and the RSF garage. In addition, UC Berkeley campus is very public
 transport friendly. If you are staying in Emeryville, Bus Line 36 will take you
 directly to campus, and the Downtown Berkeley BART station is next to campus
 
-[team-finder]:
-	https://docs.google.com/spreadsheets/d/17OPSNkdVjTZ-ssuaqQVVU88bFGGI5b-Bm5-0jNC43qM/edit?usp=sharing
+[Team-Finder]:
+  https://docs.google.com/spreadsheets/d/17OPSNkdVjTZ-ssuaqQVVU88bFGGI5b-Bm5-0jNC43qM/edit?usp=sharing
