add registration closed notice

--- a/content/events/bmmt-2024.md
+++ b/content/events/bmmt-2024.md
@@ -17,9 +17,8 @@ There are no restrictions on how many teams/students a single coach can
 register. You do not have to be local to the Bay Area or California to register
 for BmMT.
 
-{% alert(title="Limited Registration") %} Registration is now open for BmMT
-2024! We estimate to have space for approximately 800 students, and registration
-will close when seats have been sold out. {% end %}
+{% alert(title="Registration Closed") %} We have hit our cap of 800
+registrations, and registration is now closed for BmMT 2024. {% end %}
 
 # Registration Information
 
