Update to tiebreaker description, schedule added.

--- a/content/events/bmmt-2024.md
+++ b/content/events/bmmt-2024.md
@@ -92,8 +92,34 @@ multiple prior questions.
 
 ## Tiebreakers
 
-The tiebreakers will be held for the top scoring students in the individual
-round. Tiebreaker qualifiers will be announced at the end of the Relay Round,
+**Tiebreakers shall only be to break ties for awards, not for honorable mention or distinguished honorable mention**
+
+For non-puzzle rounds:
+
+- Questions are ordered from hardest to easiest based on the number of people who answered correctly.
+- Whoever solved the hardest problem among those tied is placed the highest, followed by the one who solved the next hardest, etc.
+
+
+
+Puzzle:
+
+- Puzzles are ordered by difficulty based on the average score of all teams on each puzzle. 
+
+- Teams are then compared on the total score of the hardest 1/3 of problems.
+
+- If teams are still tied, they are compared on the score of the hardest puzzle, followed by the second hardest, etc.
+
+- If teams are still tied, we go through the following:\
+Combined score of the middle third of puzzles\
+Individual scores of the middle third of puzzles\
+Individual scores of the easiest puzzles.
+
+- For example, the splits for puzzles would look like this:\
+8 puzzle problems = 3 hardest / 2 middle / 3 easiest\
+10 puzzle problems = 3 hard / 4 mid / 3 easy\
+12 puzzle problems = 4 hard / 4 mid / 4 easy
+
+If students are still tied, we will run a tiebreaker round. If teams are still tied, the tie will stand. Tiebreaker qualifiers will be announced at the end of the Relay Round,
 and will be a 15-minute test. The test will consist of three questions, and be
 scored primarily on correctness and secondarily on submission time; that is, an
 earlier submission will be worth more than a later one with the same number of
@@ -189,14 +215,14 @@ top 10% score, whichever is greater.
 The schedule will be updated here soon, but the event is expected to begin at 8
 AM and end at 6:30 PM.
 
-<!--- | Time     | Student Event                   | -->
-<!--- | -------- | ------------------------------- | -->
-<!--- | 8:00 AM  | Check-In                        | -->
-<!--- | 9:00 AM  | Puzzle Round + Individual Round | -->
-<!--- | 12:00 PM | Lunch                           | -->
-<!--- | 1:15 PM  | Team Round + Relay Round        | -->
-<!--- | 3:30 PM  | Activities                      | -->
-<!--- | 5:00 PM  | Awards                          | -->
+| Time     | Student Event                   |
+| -------- | ------------------------------- |
+| 8:00 AM  | Check-In / Pick-up              |
+| 9:00 AM  | Puzzle Round + Individual Round |
+| 12:00 PM | Lunch                           |
+| 1:15 PM  | Team Round + Relay Round        |
+| 4:00 PM  | Activities                      |
+| 5:30 PM  | Awards                          |
 
 # Day of Logistics
 
