--- a/content/events/bmmt-2024.md
+++ b/content/events/bmmt-2024.md
@@ -212,9 +212,7 @@ top 10% score, whichever is greater.
 
 # Schedule
 
-The schedule will be updated here soon, but the event is expected to begin at 8
-AM and end at 6:30 PM.
-
+The event will run from 8:00 AM to 6:30 PM
 | Time     | Student Event                   |
 | -------- | ------------------------------- |
 | 8:00 AM  | Check-In / Pick-up              |
