small fix for FAQ; added Day-of instructions

--- a/content/events/bmmt-2024.md
+++ b/content/events/bmmt-2024.md
@@ -225,6 +225,9 @@ The event will run from 8:00 AM to 6:30 PM
 
 # Day of Logistics
 
+## When you get here
+Head into [Dwinelle Hall](https://www.google.com/maps/place/Dwinelle+Hall,+Berkeley,+CA+94704/@37.8707002,-122.2605518,16z/data=!3m1!4b1!4m6!3m5!1s0x80857c26625762f5:0xc5fa3349de95df50!8m2!3d37.8707002!4d-122.2605518!16s%2Fg%2F1_lx4gym?entry=ttu) whether you checked in online or not. If you have not yet checked in, you'll need to do so in Dwinelle 145. If you have checked in online, you'll need to pick up your t-shirts and materials for the tournament in Dwinelle 155.
+
 ## Room Assignments
 
 BmMT will give out room assignments to teams where they will take every test
@@ -242,7 +245,7 @@ answers will not be graded. Cheating in any form will not be tolerated, and
 failure to comply with all rules may result in immediate and irreversible
 disqualification.
 
-### Can middle school students compete? What if I don’t have a team?
+### Can elementary school students compete? What if I don’t have a team?
 
 Yes! BmMT is open to any student in 8th grade or below, including those who
 haven’t entered middle school. While students are allowed to compete as
