periods added (important)

--- a/content/events/bmmt-2024.md
+++ b/content/events/bmmt-2024.md
@@ -92,7 +92,7 @@ multiple prior questions.
 
 ## Tiebreakers
 
-**Tiebreakers shall only be to break ties for awards, not for honorable mention or distinguished honorable mention**
+**Tiebreakers shall only be to break ties for awards, not for honorable mention or distinguished honorable mention.**
 
 For non-puzzle rounds:
 
@@ -212,11 +212,11 @@ top 10% score, whichever is greater.
 
 # Schedule
 
-The event will run from 8:00 AM to 6:30 PM
+The event will run from 8:00 AM to 6:30 PM.
 
 | Time     | Student Event                   |
 | -------- | ------------------------------- |
-| 8:00 AM  | Check-In / Pick-up              |
+| 8:00 AM  | Check-in / Pick-up              |
 | 9:00 AM  | Puzzle Round + Individual Round |
 | 12:00 PM | Lunch                           |
 | 1:15 PM  | Team Round + Relay Round        |
@@ -233,6 +233,13 @@ Head into [Dwinelle Hall](https://www.google.com/maps/place/Dwinelle+Hall,+Berke
 BmMT will give out room assignments to teams where they will take every test
 during the day. Classroom assignments will be posted closer to the competition
 date.
+
+## Awards
+We will be running awards in three different auditoriums! To minimize the chaos, we've pre-assigned where everyone should head to get to awards, based on contestDojo organization name:
+
+Dwinelle 145: A-B\
+Dwinelle 155: C-Ra\
+Hearst Field Annex A1: Re-Z
 
 # Frequently Asked Questions
 
@@ -270,7 +277,7 @@ globe for competitors wishing to compete in a different time zone.
 
 Lunch is **not provided** for BmMT 2024. Students, coaches and parents are free
 to find food in Berkeley. Restaurants can be found on the south side of campus
-(~5 minute walk from home rooms) and downtown (~15 minute walk from home rooms)
+(~5 minute walk from home rooms) and downtown (~15 minute walk from home rooms).
 
 ### Where can I find parking / How can I get around Berkeley?
 
@@ -279,7 +286,7 @@ up to coaches and/or parents to handle travel logistics. There are a number of
 parking garages around the campus, including Underhill Structure, Lower Hearst
 Structure, and the RSF garage. In addition, UC Berkeley campus is very public
 transport friendly. If you are staying in Emeryville, Bus Line 36 will take you
-directly to campus, and the Downtown Berkeley BART station is next to campus
+directly to campus, and the Downtown Berkeley BART station is next to campus.
 
 [Team-Finder]:
   https://docs.google.com/spreadsheets/d/17OPSNkdVjTZ-ssuaqQVVU88bFGGI5b-Bm5-0jNC43qM/edit?usp=sharing
