updated relay round length

--- a/content/events/bmmt-2024.md
+++ b/content/events/bmmt-2024.md
@@ -84,7 +84,7 @@ to, algebra, geometry, counting, probability, and number theory.
 The team round consists of 20 short answer questions. Students may work with
 their teams on these questions.
 
-### Relay Round (Duration TBA)
+### Relay Round (40 mins)
 
 The relay round consists of 20 problems across various subjects in math. The key
 feature of this round is that some questions may depend on answers from one or
