feat: add activities

--- a/content/events/bmmt-2024.md
+++ b/content/events/bmmt-2024.md
@@ -223,6 +223,24 @@ The event will run from 8:00 AM to 6:30 PM.
 | 4:00 PM  | Activities                      |
 | 5:30 PM  | Awards                          |
 
+# Activities
+
+## Student Activities
+
+__Countdown__ [_Dwinelle 145_] Countdown is an individual activity where competitors will race to see who can correctly answer simple math questions the quickest! 64 students will enter, going through a single elimination bracket until only one remains!
+
+__Estimathon__ [_Dwinelle 155_] A team-based contest that combines trivia, game theory, strategy, and mathematical thinking. Teams of ~3 will be under a time limit to work on a set of 13 Fermi-style problems.
+
+__Origami__ [_Hearst Field Annex A1_] Do you want to bring home a cute souvenir from BmMT? Come make your own origami dice! We will be offering multiple paper patterns and instructions, and teaching from the basics of modular origami. No prior craft experience is needed!
+
+__Minigames__ [_Dwinelle 215 & 219_] Would you like to play a game??? Many games??? Many minigames??? Compete against students in classic math challenges. See who can manipulate numbers through factoring, operations, and tricks in a variety of games
+
+## Parent Activities
+
+9:00 AM: __Po Shen Loh Talk__ [_Dwinelle 155_] Come join us for a 90 minute talk featuring CMU Professor, founder of Expii, and USA IMO coach Po-Shen Loh.
+
+11:00AM: __Campus Tours__ [_Dwinelle 155_] Take a walk around and learn what makes the UC Berkeley campus so unique.
+
 # Day of Logistics
 
 ## When you get here
