feat: add coach lounge

--- a/content/events/bmmt-2024.md
+++ b/content/events/bmmt-2024.md
@@ -241,6 +241,10 @@ __Minigames__ [_Dwinelle 215 & 219_] Would you like to play a game??? Many games
 
 11:00AM: __Campus Tours__ [_Dwinelle 155_] Take a walk around and learn what makes the UC Berkeley campus so unique.
 
+## Coach Lounge
+
+We've also assigned two rooms: Dwinelle 225 and Dwinelle 279 as silent rooms in case you wish to work / grade assignments in peace. Each room has a capacity of ~15-20 people.
+
 # Day of Logistics
 
 ## When you get here
