--- a/content/events/bmmt-2024.md
+++ b/content/events/bmmt-2024.md
@@ -92,38 +92,43 @@ multiple prior questions.
 
 ## Tiebreakers
 
-**Tiebreakers shall only be to break ties for awards, not for honorable mention or distinguished honorable mention.**
+**Tiebreakers shall only be to break ties for awards, not for honorable mention
+or distinguished honorable mention.**
 
 For non-puzzle rounds:
 
-- Questions are ordered from hardest to easiest based on the number of people who answered correctly.
-- Whoever solved the hardest problem among those tied is placed the highest, followed by the one who solved the next hardest, etc.
-
-
+- Questions are ordered from hardest to easiest based on the number of people
+  who answered correctly.
+- Whoever solved the hardest problem among those tied is placed the highest,
+  followed by the one who solved the next hardest, etc.
 
 Puzzle:
 
-- Puzzles are ordered by difficulty based on the average score of all teams on each puzzle. 
+- Puzzles are ordered by difficulty based on the average score of all teams on
+  each puzzle.
 
 - Teams are then compared on the total score of the hardest 1/3 of problems.
 
-- If teams are still tied, they are compared on the score of the hardest puzzle, followed by the second hardest, etc.
+- If teams are still tied, they are compared on the score of the hardest puzzle,
+  followed by the second hardest, etc.
 
 - If teams are still tied, we go through the following:\
-Combined score of the middle third of puzzles\
-Individual scores of the middle third of puzzles\
-Individual scores of the easiest puzzles.
+  Combined score of the middle third of puzzles\
+  Individual scores of the middle third of puzzles\
+  Individual scores of the easiest puzzles.
 
 - For example, the splits for puzzles would look like this:\
-8 puzzle problems = 3 hardest / 2 middle / 3 easiest\
-10 puzzle problems = 3 hard / 4 mid / 3 easy\
-12 puzzle problems = 4 hard / 4 mid / 4 easy
+  8 puzzle problems = 3 hardest / 2 middle / 3 easiest\
+  10 puzzle problems = 3 hard / 4 mid / 3 easy\
+  12 puzzle problems = 4 hard / 4 mid / 4 easy
 
-If students are still tied, we will run a tiebreaker round. If teams are still tied, the tie will stand. Tiebreaker qualifiers will be announced at the end of the Relay Round,
-and will be a 15-minute test. The test will consist of three questions, and be
-scored primarily on correctness and secondarily on submission time; that is, an
-earlier submission will be worth more than a later one with the same number of
-correct answers, but less than a later one with more correct answers.
+If students are still tied, we will run a tiebreaker round. If teams are still
+tied, the tie will stand. Tiebreaker qualifiers will be announced at the end of
+the Relay Round, and will be a 15-minute test. The test will consist of three
+questions, and be scored primarily on correctness and secondarily on submission
+time; that is, an earlier submission will be worth more than a later one with
+the same number of correct answers, but less than a later one with more correct
+answers.
 
 ## Summary
 
@@ -227,28 +232,48 @@ The event will run from 8:00 AM to 6:30 PM.
 
 ## Student Activities
 
-__Countdown__ [_Dwinelle 145_] Countdown is an individual activity where competitors will race to see who can correctly answer simple math questions the quickest! 64 students will enter, going through a single elimination bracket until only one remains!
+**Countdown** [_Dwinelle 145_] Countdown is an individual activity where
+competitors will race to see who can correctly answer simple math questions the
+quickest! 64 students will enter, going through a single elimination bracket
+until only one remains!
 
-__Estimathon__ [_Dwinelle 155_] A team-based contest that combines trivia, game theory, strategy, and mathematical thinking. Teams of ~3 will be under a time limit to work on a set of 13 Fermi-style problems.
+**Estimathon** [_Dwinelle 155_] A team-based contest that combines trivia, game
+theory, strategy, and mathematical thinking. Teams of ~3 will be under a time
+limit to work on a set of 13 Fermi-style problems.
 
-__Origami__ [_Hearst Field Annex A1_] Do you want to bring home a cute souvenir from BmMT? Come make your own origami dice! We will be offering multiple paper patterns and instructions, and teaching from the basics of modular origami. No prior craft experience is needed!
+**Origami** [_Hearst Field Annex A1_] Do you want to bring home a cute souvenir
+from BmMT? Come make your own origami dice! We will be offering multiple paper
+patterns and instructions, and teaching from the basics of modular origami. No
+prior craft experience is needed!
 
-__Minigames__ [_Dwinelle 215 & 219_] Would you like to play a game??? Many games??? Many minigames??? Compete against students in classic math challenges. See who can manipulate numbers through factoring, operations, and tricks in a variety of games
+**Minigames** [_Dwinelle 215 & 219_] Would you like to play a game??? Many
+games??? Many minigames??? Compete against students in classic math challenges.
+See who can manipulate numbers through factoring, operations, and tricks in a
+variety of games
 
 ## Parent Activities
 
-9:00 AM: __Po Shen Loh Talk__ [_Dwinelle 155_] Come join us for a 90 minute talk featuring CMU Professor, founder of Expii, and USA IMO coach Po-Shen Loh.
+9:00 AM: **Po Shen Loh Talk** [_Dwinelle 155_] Come join us for a 90 minute talk
+featuring CMU Professor, founder of Expii, and USA IMO coach Po-Shen Loh.
 
-11:00AM: __Campus Tours__ [_Dwinelle 155_] Take a walk around and learn what makes the UC Berkeley campus so unique.
+11:00AM: **Campus Tours** [_Dwinelle 155_] Take a walk around and learn what
+makes the UC Berkeley campus so unique.
 
 ## Coach Lounge
 
-We've also assigned two rooms: Dwinelle 225 and Dwinelle 279 as silent rooms in case you wish to work / grade assignments in peace. Each room has a capacity of ~15-20 people.
+We've also assigned two rooms: Dwinelle 225 and Dwinelle 279 as silent rooms in
+case you wish to work / grade assignments in peace. Each room has a capacity of
+~15-20 people.
 
 # Day of Logistics
 
 ## When you get here
-Head into [Dwinelle Hall](https://www.google.com/maps/place/Dwinelle+Hall,+Berkeley,+CA+94704/@37.8707002,-122.2605518,16z/data=!3m1!4b1!4m6!3m5!1s0x80857c26625762f5:0xc5fa3349de95df50!8m2!3d37.8707002!4d-122.2605518!16s%2Fg%2F1_lx4gym?entry=ttu) whether you checked in online or not. If you have not yet checked in, you'll need to do so in Dwinelle 145. If you have checked in online, you'll need to pick up your t-shirts and materials for the tournament in Dwinelle 155.
+
+Head into
+[Dwinelle Hall](https://www.google.com/maps/place/Dwinelle+Hall,+Berkeley,+CA+94704/@37.8707002,-122.2605518,16z/data=!3m1!4b1!4m6!3m5!1s0x80857c26625762f5:0xc5fa3349de95df50!8m2!3d37.8707002!4d-122.2605518!16s%2Fg%2F1_lx4gym?entry=ttu)
+whether you checked in online or not. If you have not yet checked in, you'll
+need to do so in Dwinelle 145. If you have checked in online, you'll need to
+pick up your t-shirts and materials for the tournament in Dwinelle 155.
 
 ## Room Assignments
 
@@ -257,7 +282,10 @@ during the day. Classroom assignments will be posted closer to the competition
 date.
 
 ## Awards
-We will be running awards in three different auditoriums! To minimize the chaos, we've pre-assigned where everyone should head to get to awards, based on contestDojo organization name:
+
+We will be running awards in three different auditoriums! To minimize the chaos,
+we've pre-assigned where everyone should head to get to awards, based on
+contestDojo organization name:
 
 Dwinelle 145: A-B\
 Dwinelle 155: C-Ra\
