fix: add relay time

--- a/content/events/bmmt-2024.md
+++ b/content/events/bmmt-2024.md
@@ -168,7 +168,7 @@ answers.
             <td>75 mins</td>
             <td>60 mins</td>
             <td>60 mins</td>
-            <td>TBA</td>
+            <td>40 mins</td>
         </tr>
         <tr>
             <th>% of Score</td>
