fix old references

--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -15,7 +15,6 @@ there is **no lower age limit** to participate; advanced middle school students
 are welcome to compete. Coaches can register **up to 6 students per team**. You
 do not have to be local to the Bay Area or California to register for BMT.
 
-{% button_link(href="/news/bmt-2023-logistics") %} Day-of Logistics {% end %}
 {% button_link(href="https://contestdojo.com/") %} Registration Portal {% end %}
 
 ## Registration Timeline
@@ -305,8 +304,7 @@ the team has reached at least 4 scores, of which we will take the average.
 
 ### How are awards handled?
 
-Awards will be physically presented to contestants at BMT 2023’s closing
-ceremony.
+Awards will be physically presented to contestants at the closing ceremony.
 
 ### I’m in a different timezone or non-local and can’t compete live. What are my options?
 
@@ -315,9 +313,9 @@ globe for competitors wishing to compete in a different time zone.
 
 ### Will lunch be provided?
 
-Lunch is **not provided** for BMT 2023. Students, coaches and parents are free
-to find food in Berkeley. Restaurants can be found on the south side of campus
-(~5 minute walk from homerooms) and downtown (~15 minute walk from home rooms)
+Lunch is **not provided**. Students, coaches and parents are free to find food
+in Berkeley. Restaurants can be found on the south side of campus (~5 minute
+walk from home rooms) and downtown (~15 minute walk from home rooms).
 
 ### Where can I find parking / How can I get around Berkeley?
 
