reword some things

--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -19,7 +19,7 @@ do not have to be local to the Bay Area or California to register for BMT.
 
 ## Registration Timeline
 
-Registration will open on **Monday, September 16 at 12:01 AM**. This year,
+Registration will open on **Monday, September 16 at 12:01 AM PT**. This year,
 registration will take place in two phases to give smaller organizations an
 opportunity to register.
 
@@ -295,12 +295,13 @@ disqualification.
 
 Yes! BMT is open to any student in 8th grade or below, including those who
 haven’t entered high school. While students are allowed to compete as
-individuals under “LAST_NAME Homeschool” or some other variation, we highly
-recommend that students compete on a team of at least 4 due to our scoring
-guidelines. To calculate the overall Individual score, we will take the average
-of every team member’s score on their individual portion if the team has 4, 5,
-or 6 members. If the team has less than that many members, we will add 0’s until
-the team has reached at least 4 scores, of which we will take the average.
+individuals, we highly recommend that students compete on a team of at least 4
+due to our scoring guidelines.
+
+To calculate the overall Individual score, we will take the average of every
+team member’s score on their individual portion if the team has 4, 5, or 6
+members. If the team has less than that many members, we will add 0’s until the
+team has reached at least 4 scores, of which we will take the average.
 
 ### How are awards handled?
 
@@ -323,7 +324,9 @@ BMT will not be providing parking or travel arrangements for students — it is 
 to coaches and/or parents to handle travel logistics. There are a number of
 parking garages around the campus, including Underhill Structure, Lower Hearst
 Structure, and the RSF garage. In addition, UC Berkeley campus is very public
-transport friendly. If you are staying in Emeryville, Bus Line 36 will take you
-directly to campus, and the Downtown Berkeley BART station is next to campus
+transport friendly.
+
+If you are staying in Emeryville, Bus Line 36 will take you directly to campus,
+and the Downtown Berkeley BART station is next to campus.
 
 [Team-Finder]: https://docs.google.com/spreadsheets/d/1i1RW4OTW8qP2Sb2GZd2gGTuP8Rusd-8bv-gJiRrODhI/edit?usp=sharing
