reword some things

--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -33,13 +33,13 @@ coaches to register as soon as possible to guarantee space.
 | ------------- | ------------------- | ----------------- | -------------------------------------------------------------------------------------- |
 | 9/16 – 9/30   | Phase 1             | $15               | Limited to 36 seats per organization.<br>Shirts may be pre-ordered for $8 per student. |
 | 10/1 – 10/14  | Phase 2             | $15               | No limit on seats per organization.<br>Shirts may be pre-ordered for $8 per student.   |
-| 10/15 – 10/26 | Late Registration   | $25               | Shirts are not guaranteed, but may be purchased day-of for $10                         |
+| 10/15 – 10/26 | Adjustment          | $25               | Shirts are not guaranteed, but may be purchased day-of for $10.                        |
 
-\*All dates are in US Pacific Time. That is, Phase 2 Registration ends at 11:59
+\*All dates are in US Pacific Time. That is, Phase 2 registration ends at 11:59
 PM PT on 10/14/2024.
 
 \*\*For students facing financial hardship, please contact <team@berkeley.mt>
-for a fee waiver. We will not honor refunds during late registration.
+for a fee waiver. We will not honor refunds during the Adjustment period.
 
 ## How to Register
 
@@ -75,7 +75,7 @@ the document.
 ## Event Schedule
 
 Our event schedule is yet to be finalized, but we expect the tournament to start
-at 8:00 AM and end at 7:00 PM, with a lunch break in the middle.
+at 7:30 AM and end before 7:30 PM, with a lunch break in the middle.
 
 ## Contest Format
 
