remove weird text

--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -39,7 +39,7 @@ coaches to register as soon as possible to guarantee space.
 PM PT on 10/14/2024.
 
 \*\*For students facing financial hardship, please contact <team@berkeley.mt>
-for a fee waiver. We will not honor refunds during the Adjustment period.
+for a fee waiver.
 
 ## How to Register
 
