--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -54,14 +54,14 @@ consent waivers through this portal. Contestants will NOT be allowed to take the
 contest without having a signed liability and consent to treatment waiver.**
 
 Any questions about the ContestDojo portal should be directed to us at
-<questions@berkeley.mt>.
+<team@berkeley.mt>.
 
 ## Student Eligibility
 
 - Students must be in **grade 12 or below** to be eligible for BMT.
 - Students do not have to be local to the California Bay Area or the U.S. to
-  participate in BMT. However, we do run iterations of BMT that may be a better
-  fit for some students. Please see [Satellites](TODO) for other options.
+  participate in BMT. However, we do offer BMT in other locations that may be a
+  better fit for some students. Please see [Satellites](TODO) for other options.
 - Coaches may register multiple teams. We ask that **for every 2 teams, there is
   at least 1 parent chaperone**.
 
