--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -47,7 +47,7 @@ Most pre- and post-contest operations, including registration, team formation,
 waivers, and score reports, should be performed on
 [ContestDojo](https://contestdojo.com/), an online math competition platform.
 For people unfamiliar with ContestDojo, we have a released a guide, which can be
-found here: [ContestDojo Guide](TODO).
+found here: [ContestDojo Guide].
 
 **All contestants are required to have their parent/guardian sign UC Berkeley’s
 consent waivers through this portal. Contestants will NOT be allowed to take the
@@ -329,4 +329,5 @@ transport friendly.
 If you are staying in Emeryville, Bus Line 36 will take you directly to campus,
 and the Downtown Berkeley BART station is next to campus.
 
-[Team-Finder]: https://docs.google.com/spreadsheets/d/1i1RW4OTW8qP2Sb2GZd2gGTuP8Rusd-8bv-gJiRrODhI/edit?usp=sharing
+[Team-Finder]: https://docs.google.com/spreadsheets/d/1u5m7o9AKRmRdWDF1NqUc9Hs3rYGWKwtpREvVAGL5YvE/edit?usp=sharingg
+[ContestDojo Guide]: https://docs.berkeley.mt/s/contestdojo-guide#h-coaches-inviting-students
