--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -60,8 +60,8 @@ Any questions about the ContestDojo portal should be directed to us at
 
 - Students must be in **grade 12 or below** to be eligible for BMT.
 - Students do not have to be local to the California Bay Area or the U.S. to
-  participate in BMT. However, we do offer BMT in other locations that may be a
-  better fit for some students. Please see [Satellites](TODO) for other options.
+  participate in BMT. However, we will offer BMT Online in either December or
+  January (TBA), which may be a better fit for some students.
 - Coaches may register multiple teams. We ask that **for every 2 teams, there is
   at least 1 parent chaperone**.
 
