fix contestdojo guide link

--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -330,4 +330,4 @@ If you are staying in Emeryville, Bus Line 36 will take you directly to campus,
 and the Downtown Berkeley BART station is next to campus.
 
 [Team-Finder]: https://docs.google.com/spreadsheets/d/1u5m7o9AKRmRdWDF1NqUc9Hs3rYGWKwtpREvVAGL5YvE/edit?usp=sharingg
-[ContestDojo Guide]: https://docs.berkeley.mt/s/contestdojo-guide#h-coaches-inviting-students
+[ContestDojo Guide]: https://docs.berkeley.mt/s/contestdojo-guide
