edit heading sizes

--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -41,6 +41,15 @@ PM PT on 10/14/2024.
 \*\*For students facing financial hardship, please contact <team@berkeley.mt>
 for a fee waiver.
 
+## Student Eligibility
+
+- Students must be in **grade 12 or below** to be eligible for BMT.
+- Students do not have to be local to the California Bay Area or the U.S. to
+  participate in BMT. However, we will offer BMT Online in either December or
+  January (TBA), which may be a better fit for some students.
+- Coaches may register multiple teams. We ask that **for every 2 teams, there is
+  at least 1 parent chaperone**.
+
 ## How to Register
 
 Most pre- and post-contest operations, including registration, team formation,
@@ -56,23 +65,14 @@ contest without having a signed liability and consent to treatment waiver.**
 Any questions about the ContestDojo portal should be directed to us at
 <team@berkeley.mt>.
 
-## Student Eligibility
-
-- Students must be in **grade 12 or below** to be eligible for BMT.
-- Students do not have to be local to the California Bay Area or the U.S. to
-  participate in BMT. However, we will offer BMT Online in either December or
-  January (TBA), which may be a better fit for some students.
-- Coaches may register multiple teams. We ask that **for every 2 teams, there is
-  at least 1 parent chaperone**.
-
-## Team Finder
+### Team Finder
 
 Students may register as a team of 1, however, it is beneficial to compete on a
 team of at least 4 due to our scoring guidelines. For students who do not have a
 full team, we organized a [Team-Finder] document. Follow all outlined steps in
 the document.
 
-## Event Schedule
+## Schedule
 
 Our event schedule is yet to be finalized, but we expect the tournament to start
 at 7:30 AM and end before 7:30 PM, with a lunch break in the middle.
@@ -130,7 +130,7 @@ Additionally, if a student takes the General Test instead of the two Focus
 Tests, their score will only count for half as many points as the Focus
 combination would.
 
-## Tiebreakers
+### Tiebreakers
 
 This year, to streamline the event, we have a new automatic tiebreaker policy,
 which works as follows:
@@ -165,7 +165,7 @@ less than a later one with more correct answers.
 Students may submit multiple times within the duration of the test, but only the
 last submission will be considered.
 
-## Round & Scoring Summary
+### Round & Scoring Summary
 
 <table>
   <colgroup>
@@ -239,7 +239,7 @@ last submission will be considered.
   </tbody>
 </table>
 
-## Acceptable Answers
+### Acceptable Answers
 
 Students are responsible for familiarizing themselves with the
 [acceptable test formatting document](/assets/answer-formats.pdf) and
